improve responsiveness, add reveal effects, fix spacing

--- a/page/sass/invest-platform.scss
+++ b/page/sass/invest-platform.scss
@@ -1,18 +1,24 @@
 .invest-platform {
-    h2 {
-        color: $gray-darker;
-        font-size: $section-title-font-size;
-        font-weight: $font-weight-more-bold;
-        margin-top: 100px;
-        margin-bottom: 30px;
-    }
+  h2 {
+    margin-top: 100px;
+    margin-bottom: 30px;
+    color: $gray-darker;
+    font-size: $section-title-font-size;
+    font-weight: $font-weight-more-bold;
+  }
 
-    .product-image {
-        max-height: 520px;
-        margin: 0 auto;
-    }
+  .product-image {
+    margin: 0 auto;
+    max-height: 520px;
 
-    .btn {
-        margin-bottom: 30px;
+    @media (max-width: $screen-sm-max) {
+      max-height: 380px;
     }
+  }
+
+  .btn-container {
+    margin-top: 60px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
 }
